# C-Tetris

./: README.md
CMake-project/: CMakeLists.txt  data.h  main.cpp
Visual Studio-project/: Project5.aps  Project5.sln  Project5.vcxproj  Project5.vcxproj.filters  RCa40800  data.h  main.cpp  resource.h  test.aps  test.rc  俄罗斯方块.APS
Visual Studio-project/x64/Debug/: Project5.exe.recipe  Project5.ilk  Project5.vcxproj.FileListAbsolute.txt  main.obj.enc  vc143.idb  俄罗斯方块.exe.recipe  俄罗斯方块.ilk
Visual Studio-project/x64/Debug/Project5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Visual Studio-project/x64/Debug/俄罗斯方块.tlog/: link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  俄罗斯方块.lastbuildstate
Visual Studio-project/x64/Release/: Project5.exe.recipe  Project5.iobj  Project5.ipdb  Project5.vcxproj.FileListAbsolute.txt  RCa12056  test.res  俄罗斯方块.exe.recipe  俄罗斯方块.iobj  俄罗斯方块.ipdb
Visual Studio-project/x64/Release/Project5.tlog/: CL.write.1.tlog  Project5.lastbuildstate  Project5.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.read.1.tlog
Visual Studio-project/x64/Release/俄罗斯方块.tlog/: CL.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  俄罗斯方块.write.1u.tlog
